--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "watch": "nodemon ./bin/www"
   },
   "dependencies": {
+    "argon2": "^0.28.5",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "moment": "^2.29.1",
+    "morgan": "~1.9.1",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0"
   }
 }
